--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,13 @@
 
 .main{
     margin: 20px 10px 0 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h3{
+    font-size: 1rem;
 }
 input, button{
     appearance: none;
@@ -39,4 +46,7 @@ body{
 }
 #call-action, #prompt{
     padding-bottom: 0.5rem;
+}
+.entry-list{
+    padding-top: 1.5rem;
 }
