--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ body {
   margin-bottom: 3rem;
   background-color: rgba(255, 255, 255,.5);
   border-radius: 5px;
-  transition: opacity 2s;
+  transition: opacity .5s;
 }
 
 #entry-list-title {
