--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,11 @@ button {
   border-radius: 5px;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   animation: transitionIn 0.75s;
   background-color: var(--silverPink);
@@ -76,13 +81,14 @@ body {
 }
 .entry-list {
   padding-top: 1.5rem;
+  width: 343px;
+  margin-left: -17px;
 }
 .item-entry {
   margin-bottom: 3rem;
   background-color: rgba(255, 255, 255,.5);
   border-radius: 5px;
   transition: opacity .5s;
-  display: inline-block;
 }
 
 #entry-list-title {
@@ -128,19 +134,18 @@ body {
 }
 
 .submit-button:hover:enabled,
-.submit-button:focus:enabled,
 .edit:hover:enabled,
-.edit:focus:enabled,
 .delete:hover:enabled,
-.delete:focus:enabled,
 #change-prompt:hover:enabled,
-#change-prompt:focus:enabled,
-.add-prompt-button:hover:enabled,
-.add-prompt-button:focus:enabled {
+.add-prompt-button:hover:enabled {
   box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
   transform: translateY(-0.25em);
 }
 
 .entry-box{
   margin-bottom: 26.16px;
+}
+
+#prompt{
+  text-align: center;
 }
